--- a/Web-Dev/CSS/Day5/index5.html
+++ b/Web-Dev/CSS/Day5/index5.html
@@ -7,8 +7,22 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style1.css">
 </head>
     <body>
-        <a href="../../HTML/Elements/index1.html">Main Page</a>
-        <h1 class="myFirstClass">Hello CSS</h1>
-        <h1>Second one</h1>
+        <div>
+            <a href="../../HTML/Elements/index1.html">Main Page</a>
+            <h1 class="myFirstClass">Hello CSS</h1>
+            <h1>Second one</h1>
+            
+            <h1 id="firstID">TuzkuruCayiri</h1>
+        </div>
+        <div>
+            <h1>ads</h1>
+            <h1>qwe</h1>
+            <h1>qwerwq</h1>
+            <p>dsadsadsawwqeq</p>
+        </div>
+
+        <h1>dasdsa</h1>
+            
     </body>
 </html>
+
