--- a/Web-Dev/CSS/w3sSelf/index.html
+++ b/Web-Dev/CSS/w3sSelf/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <p> <a href="index2.html" style="text-decoration: none; color: blue;"><i>Second page</i></a> <a href="index3.html"> <i>Third Page</i></a> <a href="index4.html"> <i>Fourth Page</i></a>  <a href="index5.html"> <i>Fifth Page</i></a></p>
+  <p> <a href="index2.html" style="text-decoration: none; color: blue;"><i>Second page</i></a> <a href="index3.html"> <i>Third Page</i></a> <a href="index4.html"> <i>Fourth Page</i></a>  <a href="index5.html"> <i>Fifth Page</i></a><a href="index6.html"> <i>Sixth Page</i></a></p>
   <table class="ws-table-all notranslate">
     <tbody>
       <tr>
