--- a/Web-Dev/CSS/w3sSelf/index5.html
+++ b/Web-Dev/CSS/w3sSelf/index5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="style5.css">
-    <title>Fifth Page</title>
+    <title>Fifth Page Fonts</title>
 </head>
 <body>
     <a href="index.html"> <i>Main Page</i></a>
@@ -43,6 +43,94 @@
         </tr>
     </table>
     <div class="p5d1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis obcaecati tempore, et expedita praesentium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis obcaecati tempore, et expedita praesentium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore debitis obcaecati tempore, et expedita praesentium.</p>
+    </div>
+    <div class="p5d2">
+        <h1>These are the fallback fonts that suggested</h1>
+        <div>
+            <h2 style="font-family: Arial, sans-serif;">arial</h2>
+            <p style="font-family: Arial, sans-serif;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: Arial, sans-serif;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: Verdana, sans-serif;">Verdana</h2>
+            <p style="font-family: Verdana, sans-serif;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: Verdana, sans-serif;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: Tahoma, sans-serif;">Tahoma</h2>
+            <p style="font-family: Tahoma, sans-serif;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: Tahoma, sans-serif;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: 'Trebuchet MS', sans-serif;">'Trebuchet MS'</h2>
+            <p style="font-family: 'Trebuchet MS', sans-serif;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: 'Trebuchet MS', sans-serif;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: 'Times New Roman', serif;">'Times New Roman'</h2>
+            <p style="font-family: 'Times New Roman', serif;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: 'Times New Roman', serif;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: Georgia, serif;">GEorgia</h2>
+            <p style="font-family: Georgia, serif;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: Georgia, serif;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: Garamond, serif;">Garamond</h2>
+            <p style="font-family: Garamond, serif;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: Garamond, serif;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: 'Courier New', monospace;">Courier New</h2>
+            <p style="font-family: 'Courier New', monospace;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: 'Courier New', monospace;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+        <div>
+            <h2 style="font-family: 'Brush Script MT', cursive;">'Brusch Script MT'</h2>
+            <p style="font-family: 'Brush Script MT', cursive;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, placeat.</p>
+            <h5 style="font-family: 'Brush Script MT', cursive;">0 1 2 3 4 5 6 7 8 9</h5>
+        </div>
+    </div>
+    <hr><br><hr>
+    <div class="p5d3">
+        <p>font style</p>
+        <p>normal Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, possimus.</p>
+        <p>italic Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, possimus.</p>
+        <p>oblique Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, possimus.</p>
+    </div> <br>
+    <div class="p5d4">
+        <p>Font Weight</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, hic.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, hic.</p>
+    </div>
+    <br>
+    <div class="p5d5">
+        <p>Font Variant</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aperiam nostrum, ratione tempora magnam cumque?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aperiam nostrum, ratione tempora magnam cumque?</p>
+    </div> <br>
+    <div class="p5d6">
+        <p>Font size with pixel</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit autem sed esse!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit autem sed esse!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit autem sed esse!</p>
+    </div><br>
+    <div class="p5d7">
+        <p>Font size with EM</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet neque laborum quaerat?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet neque laborum quaerat?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet neque laborum quaerat?</p>
+    </div><br>
+    <div class="p5d8">
+        <h1>This is heading 1</h1>
+        <h2>This is heading 2</h2>
+        <h3>Hello world</h3>
+        <p>This is a paragraph.</p>
+        <p>Specifying the font-size in percent and em displays the same size in all major browsers, and allows all browsers to resize the text!</p>
     </div>
 </body>
 </html>
