--- a/Web-Dev/CSS/Day5/index5.html
+++ b/Web-Dev/CSS/Day5/index5.html
@@ -8,7 +8,9 @@
 </head>
     <body>
         <div>
-            <a href="../../HTML/Elements/index1.html">Main Page</a>
+            <a href="../../HTML/Elements/index1.html">Main Page</a><br>
+            <a href="../Day6/index1.html">Second CSS Page</a><br>
+            <a href="../w3sSelf/index.html">Self Study CSS Page</a><br>
             <h1 class="myFirstClass">Hello CSS</h1>
             <h1>Second one</h1>
             
