--- a/Web-Dev/CSS/w3sSelf/index.html
+++ b/Web-Dev/CSS/w3sSelf/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-  <p> <a href="index2.html" style="text-decoration: none; color: blue;"><i>Second page</i></a> <a href="index3.html"> <i>Third Page</i></a> <a href="index4.html"> <i>Fourth Page</i></a>  <a href="index5.html"> <i>Fifth Page</i></a><a href="index6.html"> <i>Sixth Page</i></a></p>
+  <p style="background-color: black;"> 
+    <a href="../Day5/index5.html"> <i>Main CSS page</i></a> <hr>
+    <a href="index2.html"> <i>Second page</i></a> <hr>
+    <a href="index3.html"> <i>Third Page</i></a> <hr>
+    <a href="index4.html"> <i>Fourth Page</i></a>  <hr>
+    <a href="index5.html"> <i>Fifth Page</i></a><hr>
+    <a href="index6.html"> <i>Sixth Page</i></a><hr>
+    <a href="index7.html"> <i>Seventh Page Fontawesome</i></a><hr>
+    <a href="index8.html"> <i>Eight Page Bootstrap</i></a><hr>
+  </p>
   <table class="ws-table-all notranslate">
     <tbody>
       <tr>
@@ -18,32 +27,32 @@
         <th>Example description</th>
       </tr>
       <tr>
-        <td><a href="/cssref/sel_id.asp">#<i>id</i></a></td>
+        <td>#id</td>
         <td class="notranslate">#firstname</td>
         <td>Selects the element with id="firstname"</td>
       </tr>
       <tr>
-        <td><a href="/cssref/sel_class.asp">.<i>class</i></a></td>
+        <td>.class</td>
         <td class="notranslate">.intro</td>
         <td>Selects all elements with class="intro"</td>
       </tr>
       <tr>
-        <td><em><a href="../cssref/sel_element_class.asp">element.class</a></em></td>
+        <td>element.class</td>
         <td class="notranslate">p.intro</td>
         <td>Selects only &lt;p&gt; elements with class="intro"</td>
       </tr>
       <tr>
-        <td><a href="/cssref/sel_all.asp">*</a></td>
+        <td>*</td>
         <td class="notranslate">*</td>
         <td>Selects all elements</td>
       </tr>
       <tr>
-        <td><i><a href="/cssref/sel_element.asp">element</a></i></td>
+        <td>elements</td>
         <td class="notranslate">p</td>
         <td>Selects all &lt;p&gt; elements</td>
       </tr>
       <tr>
-        <td><i><a href="/cssref/sel_element_comma.asp">element,element,..</a></i></td>
+        <td>element,element,..</td>
         <td class="notranslate">div, p</td>
         <td>Selects all &lt;div&gt; elements and all &lt;p&gt; elements</td>
       </tr>
