--- a/Web-Dev/CSS/w3sSelf/index7.html
+++ b/Web-Dev/CSS/w3sSelf/index7.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="style7.css">
-    <title>7th Page</title>
+    <script src="https://kit.fontawesome.com/309c57bc1a.js" crossorigin="anonymous"></script>
+    <title>7th Page Font Awesome</title>
 </head>
 <body>
+    <a href="index.html"> Main <strong>CSS</strong>  <em>Self Study Page</em></a> <hr>
+    <span style="font-size: 3em; color: Tomato;">
+        <i class="fa-solid fa-camera"></i>
+      </span>
     
+      <span style="font-size: 48px; color: Dodgerblue;">
+        <i class="fa-solid fa-camera"></i>
+      </span>
+    
+      <span style="font-size: 3rem;">
+        <span style="color: Mediumslateblue;">
+        <i class="fa-solid fa-camera"></i>
+        </span>
+      </span><hr>
+
+    <!-- all styles of icons (in Font Awesome Classic by default) -->
+<i class="fa-solid fa-user">1</i> <hr>
+<i class="fa-regular fa-user">2</i><hr>
+<i class="fa-light fa-user">3</i><hr>
+<i class="fa-thin fa-user">4</i><hr>
+<i class="fa-duotone fa-user">5</i><hr>
+
+<!-- a Brands icon -->
+<i class="fa-brands fa-font-awesome">6</i><hr>
+
+<!-- a specifically set Font Awesome Sharp Solid icon -->
+<span class="fa-sharp fa-solid fa-user">7</span><hr>
+
+<!-- a specifically set Font Awesome Sharp Regular icon -->
+<i class="fa-sharp fa-regular fa-user">8</i><hr>
+<p>Animation</p>
+<div class="fa-3x">
+    <i class="fa-solid fa-circle-plus fa-beat"></i>
+    <i class="fa-solid fa-heart fa-beat"></i>
+    <i class="fa-solid fa-heart fa-beat" style="--fa-animation-duration: 0.5s;" ></i>
+    <i class="fa-solid fa-heart fa-beat" style="--fa-animation-duration: 2s;"></i>
+    <i class="fa-solid fa-heart fa-beat" style="--fa-beat-scale: .2;"></i>
+  </div>
+  <p>animation2 </p>
+  <div class="fa-3x">
+    <i class="fa-solid fa-triangle-exclamation fa-fade"></i>
+    <i class="fa-solid fa-skull-crossbones fa-fade"></i>
+    <i class="fa-solid fa-desktop-arrow-down fa-fade"></i>
+    <i class="fa-solid fa-i-cursor fa-beat-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; --fa-beat-scale:5.0;" ></i>
+  </div>
+
+  
+  
 </body>
-</html>
+</html> 
